--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class='container'>
         <h1>Haskell Summer School</h1>
         <h3>=&lt;&lt;  Monadic Party &gt;&gt;=</h3>
-        <img src={require('./logo.jpg')}/>
+        <img src='./logo.jpg'/>
 
         <div class='row'>
             <div class='col-3 item'>
