--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <div class='header'>
       <div class='container'>
+        <img src='./logo.jpg'/>
         <h1>Haskell Summer School</h1>
         <h3>=&lt;&lt;  Monadic Party &gt;&gt;=</h3>
-        <img src={require('./logo.jpg')}/>
 
         <div class='row'>
             <div class='col-3 item'>
@@ -110,6 +110,6 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
         </div>
     </div>
 
-    <script src='/bundle.js'></script>
+    <script src='/main.js'></script>
   </body>
 </html>
