--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
 
     <div class='call-for-speakers'>
         <div class='container'>
+            <h1>=&lt;&lt; Call for speakers &gt;&gt;=</h1>
             <p>Do you want to lead workshops at the summer school? We need people like you to be a speaker at our event!</p>
             We are interested in people leading workshops spanning three to five slots on various topics that touch the Haskell ecosystem. We will be having two tracks, a beginners one that aims to cater to programmers that might not have extensive experience with Haskell and an advanced for people who know and understand it.
             <a class="button button-primary" href="https://google.com" target='_blank'>Submit a proposal</a>
