extracted css to a separate file

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>Monadic Party</title>
+    <link rel="stylesheet" href="/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
   </head>
@@ -116,12 +117,12 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
     <div class='call-for-speakers'>
         <div class='container'>
             <h1>=&lt;&lt; Call for speakers &gt;&gt;=</h1>
+            <h4>Deadline: 28th of Febuary 2018</h4>
             
             <p>Do you want to lead workshops at the summer school? We need people like you to be a speaker at our event!</p>
             
-            <p>We are looking for people interested in leading workshops spanning three to five slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will be having two tracks, a beginners one that aims to cater to programmers that might not have experience with Haskell and an advanced for people who know and understand it and want to learn new things.</p>
+            <p>We are looking for people interested in leading workshops spanning three to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will be having two tracks, a beginners one that aims to cater to programmers that might not have experience with Haskell and an advanced for people who know and understand it and want to learn new things.</p>
 
-            <h4>Deadline: 28th of Febuary 2018</h4>
             <h2>
                 <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScKD2T-5m8q4CahA-TBhdMH43ziTPv7op9j4_rcY9bZf_DWRg/viewform?usp=sf_link" target='_blank'>Submit a proposal</a>
             </h2>
