--- a/src/index.html
+++ b/src/index.html
@@ -51,14 +51,25 @@
     <div class='about-us'>
       <div class='container'>
           <h2 class='title right'><span class='first'>A</span>bout the <span class='second'>e</span>vent</h2>
+          - there is a real need for a place to learn about haskell in a longer setting
+          - so decided to do it
+          - two tracks, for beginners and advanced
+          - affordable, well communicated
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed leo enim, sollicitudin sit amet tempor a, pellentesque non orci. Phasellus at mi eget augue iaculis consectetur ut sed massa. Maecenas ullamcorper, leo convallis vestibulum sollicitudin, nulla mauris placerat leo, nec pulvinar tortor elit vel dui. Aliquam ornare orci et mauris pellentesque, ac viverra risus sagittis. Suspendisse lacinia sodales lacus et porttitor. Duis placerat ipsum massa, eu ullamcorper ipsum volutpat in. Cras imperdiet, augue vel dapibus dictum, nisl ex mattis felis, eget consequat nisi magna ut ex. Donec et tempus nisi, non iaculis est. Integer facilisis nisi at nulla lacinia pellentesque. Aenean consectetur mi elit, in malesuada dui elementum sit amet. Maecenas id lectus augue.</p>
 
               <p>Sed sodales dictum leo vitae hendrerit. Phasellus consectetur, est ac blandit posuere, nunc ante ornare lectus, in egestas sapien felis dignissim augue. Pellentesque et ligula nec mauris ultrices eleifend eget a erat. In et dolor id tortor suscipit cursus. Quisque ac sodales tortor, sit amet sagittis est. In est dui, sollicitudin sed risus eu, gravida varius ante. In hac habitasse platea dictumst. Vestibulum cursus euismod libero nec porta. Morbi rhoncus mollis nulla sollicitudin tincidunt. Nam malesuada turpis eget nunc aliquam, nec feugiat neque facilisis. Pellentesque pulvinar ultricies massa id egestas. Vivamus in justo id purus sagittis pellentesque quis vitae eros. Proin ac neque egestas, convallis elit at, maximus elit. Quisque in placerat est, in malesuada quam. Phasellus ornare suscipit sodales. Donec tempus, augue et placerat fermentum, augue mauris facilisis metus, quis ornare tortor risus eget purus.</p>
 
               <h2 class='title left'><span class='first'>T</span>he <span class='second'>V</span>enue</h2>
+              - beautiful old building recently renovated
+              - whole top floor for us, including a skybar
+              - two lecture rooms for the two tracks
+
               <p>Praesent nec auctor sem. Ut posuere enim nulla, id dictum massa venenatis eget. Etiam sit amet lorem leo. Nam nisi lectus, porttitor tincidunt leo ac, varius varius ligula. Donec congue, sapien sit amet ullamcorper feugiat, nisl ligula vehicula nisl, non molestie felis turpis et urna. Pellentesque tempus elit at dui bibendum, ac dignissim nisl volutpat. Pellentesque et urna auctor, vestibulum nibh sed, bibendum quam. Maecenas non dolor augue. Donec eget aliquam ligula. Fusce malesuada suscipit malesuada. Praesent sed ante nunc. Suspendisse ac rhoncus lectus, eget posuere nulla. Nulla ex odio, viverra eget porta vitae, varius quis elit. Mauris mattis suscipit ultricies. Suspendisse placerat erat sit amet sodales volutpat. Morbi sed metus et nisl condimentum sollicitudin.</p>
 
               <h2 class='title right'><span class='first'>A</span>bout <span class='second'>u</span>s</h2>
+              - haskell fanatics
+              - biggest functional programming meetup in central europe (check)
+              - 
               <p>Vivamus tristique ex eu justo vestibulum pellentesque. Pellentesque tempus convallis erat, ut auctor lacus blandit vitae. Mauris at arcu turpis. In sed nisl id purus sodales suscipit nec sit amet nisl. Integer at feugiat eros. Morbi placerat dolor ut accumsan malesuada. Mauris lectus tellus, dapibus vitae ligula at, aliquam sollicitudin diam. Sed finibus, lectus a fermentum pretium, mauris nibh pretium velit, nec ullamcorper ex velit quis nisi. Vestibulum et imperdiet nulla. Integer auctor ex mi, ac vestibulum ipsum consequat et. Integer ultrices quam a maximus ornare. Phasellus pellentesque imperdiet mi at aliquet.</p>
           </div>
       </div>
@@ -68,21 +79,21 @@
             <div class='row'>
                 <div class='col-4 column'>
                     <h3 class='name'>Julie Moronuki</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x164' />
+                    <img class='photo' src='/julie.jpg' />
                     <div class='bio'>
                     Julie Moronuki is one of the authors of Haskell Programming from First Principles. She has a master's degree in linguistics and taught English, English as a second language, philosophy, linguistics, and medical transcription for over ten years. When she is not writing Haskell, writing about Haskell, or teaching Haskell at a local meetups, she homeschools her two children, pickles everything in sight, and adopts too many pets.
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <h3 class='name'>Chris Martin</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x164' />
+                    <img class='photo' src='/chris.jpg' />
                     <div class='bio'>
 Chris Martin has a master's degree in computer science from Georgia Tech. He has worked for GTRI, was cofounder and CTO of Fold, and worked for Hijro writing a blockchain in Haskell. He has recently founded Typeclass Consulting with Julie Moronuki and is also writing a book, The Joy of Haskell, with her. Chris tries to increase public awareness of NixOS and the power of good documentation. He enjoys barefoot running, sour beers, and arguing with Julie about math.
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <h3 class='name'>Krzysztof Gogolewski</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x164' />
+                    <img class='photo' src='/krzysiek.jpg' />
                     <div class='bio'>
 Haskell user since 2008, currently software engineer at Codility. Studied mathematics and computer science and University of Warsaw and Ecole Polytechnique. Enjoys finding bugs in GHC.
                     </div>
@@ -105,7 +116,7 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
                 </div>
                 <div class='col-4 column'>
                     <h3 class='name'>Michał Kawalec</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x164' />
+                    <img class='photo' src='/michal.jpg' />
                     <div class='bio'>
                        Michał is an engineer of many trades. He works at X-Team where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about mountain biking ;)
                     </div>
