--- a/src/index.html
+++ b/src/index.html
@@ -51,26 +51,22 @@
     <div class='about-us'>
       <div class='container'>
           <h2 class='title right'><span class='first'>A</span>bout the <span class='second'>e</span>vent</h2>
-          - there is a real need for a place to learn about haskell in a longer setting
-          - so decided to do it
-          - two tracks, for beginners and advanced
-          - affordable, well communicated
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed leo enim, sollicitudin sit amet tempor a, pellentesque non orci. Phasellus at mi eget augue iaculis consectetur ut sed massa. Maecenas ullamcorper, leo convallis vestibulum sollicitudin, nulla mauris placerat leo, nec pulvinar tortor elit vel dui. Aliquam ornare orci et mauris pellentesque, ac viverra risus sagittis. Suspendisse lacinia sodales lacus et porttitor. Duis placerat ipsum massa, eu ullamcorper ipsum volutpat in. Cras imperdiet, augue vel dapibus dictum, nisl ex mattis felis, eget consequat nisi magna ut ex. Donec et tempus nisi, non iaculis est. Integer facilisis nisi at nulla lacinia pellentesque. Aenean consectetur mi elit, in malesuada dui elementum sit amet. Maecenas id lectus augue.</p>
+          <p>Monadic Party is a five-days long festival of Haskell learning and teaching. Our vision is to teach in depth, in a way impossible at a conference. Because of the additional time at our disposal we can get deeper into each topic than just a usual talk slot to show not only the surface but a larger part of the story behind the subject. The size will be limited and capped at fifty attendees to ensure a good learning experience.</p>
 
-              <p>Sed sodales dictum leo vitae hendrerit. Phasellus consectetur, est ac blandit posuere, nunc ante ornare lectus, in egestas sapien felis dignissim augue. Pellentesque et ligula nec mauris ultrices eleifend eget a erat. In et dolor id tortor suscipit cursus. Quisque ac sodales tortor, sit amet sagittis est. In est dui, sollicitudin sed risus eu, gravida varius ante. In hac habitasse platea dictumst. Vestibulum cursus euismod libero nec porta. Morbi rhoncus mollis nulla sollicitudin tincidunt. Nam malesuada turpis eget nunc aliquam, nec feugiat neque facilisis. Pellentesque pulvinar ultricies massa id egestas. Vivamus in justo id purus sagittis pellentesque quis vitae eros. Proin ac neque egestas, convallis elit at, maximus elit. Quisque in placerat est, in malesuada quam. Phasellus ornare suscipit sodales. Donec tempus, augue et placerat fermentum, augue mauris facilisis metus, quis ornare tortor risus eget purus.</p>
+          <p>We will have two tracks, one for programmers that aren't experienced in Haskell and would like to learn it from the basic concepts. We will show you the language over the course of the five days, intensly and in depth. The other track is for people already familiar with the language and will present a selection of talks and workshops on a variety of topics. The final talk titles will be announced after our call for speakers closes at the end of Febuary.</p>
 
-              <h2 class='title left'><span class='first'>T</span>he <span class='second'>V</span>enue</h2>
-              - beautiful old building recently renovated
-              - whole top floor for us, including a skybar
-              - two lecture rooms for the two tracks
+          <p>By organizing it in Poznan we can keep the ticket cost at a low level for such a long event, while having the school in a beautiful city with a great nightlife and a lot of things to do. The venue is a gorgeous recently restored old building at <a href='http://mlynska12.pl/' target='_blank'>Młyńska 12</a> where we have the whole highest floor at our disposal. So the only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch and tea or coffee is included in the ticket price.</p>
 
-              <p>Praesent nec auctor sem. Ut posuere enim nulla, id dictum massa venenatis eget. Etiam sit amet lorem leo. Nam nisi lectus, porttitor tincidunt leo ac, varius varius ligula. Donec congue, sapien sit amet ullamcorper feugiat, nisl ligula vehicula nisl, non molestie felis turpis et urna. Pellentesque tempus elit at dui bibendum, ac dignissim nisl volutpat. Pellentesque et urna auctor, vestibulum nibh sed, bibendum quam. Maecenas non dolor augue. Donec eget aliquam ligula. Fusce malesuada suscipit malesuada. Praesent sed ante nunc. Suspendisse ac rhoncus lectus, eget posuere nulla. Nulla ex odio, viverra eget porta vitae, varius quis elit. Mauris mattis suscipit ultricies. Suspendisse placerat erat sit amet sodales volutpat. Morbi sed metus et nisl condimentum sollicitudin.</p>
+          <h2 class='title left'><span class='first'>G</span>etting <span class='second'>T</span>here</h2>
+
+          <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Młyńska 12</a>, so any accommodation in the city center should be at a walkable distance from the venue. Depending on your budget and preferences, you can find places to stay on <a href='https://www.booking.com/searchresults.en-gb.html?label=gen173nr-1FCAEoggJCAlhYSDNYBGi2AYgBAZgBLsIBA3gxMcgBDNgBAegBAfgBC5ICAXmoAgM&lang=en-gb&sid=f338025b520e3faeca40c7db96132554&sb=1&src=index&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Findex.en-gb.html%3Flabel%3Dgen173nr-1FCAEoggJCAlhYSDNYBGi2AYgBAZgBLsIBA3gxMcgBDNgBAegBAfgBC5ICAXmoAgM%3Bsid%3Df338025b520e3faeca40c7db96132554%3Bsb_price_type%3Dtotal%26%3B&ss=Pozna%C5%84&ssne=Pozna%C5%84&ssne_untouched=Pozna%C5%84&dest_id=-523642&dest_type=city&checkin_monthday=10&checkin_month=6&checkin_year=2018&checkout_monthday=15&checkout_month=6&checkout_year=2018&group_adults=1&group_children=0&no_rooms=1&genius_rate=1&from_sf=1' target='_blank'>Booking.com</a>, <a href='https://www.hostelworld.com/search?search_keywords=Poznan%2C+Poland&country=Poland&city=Poznan&date_from=2018-06-10&date_to=2018-06-15&number_of_guests=1' target='_blank'>Hostelworld</a> or <a href='https://pl.hotels.com/search.do?resolved-location=CITY%3A1053596%3AUNKNOWN%3AUNKNOWN&destination-id=1053596&q-destination=Pozna%C5%84,%20Polska&q-check-in=2018-06-10&q-check-out=2018-06-15&q-rooms=1&q-room-0-adults=2&q-room-0-children=0' target='_blank'>Hotels.com</a>. If you feel like you need some guidance on choosing a place to stay, do email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
+
+          <p>In terms of travel, <a href='https://wizzair.com' target='_blank'>WizzAir</a>, <a href='https://www.ryanair.com/gb/en/' target='_blank'>Ryanair</a>, <a href='https://www.lufthansa.com/uk/en/Homepage' target='_blank'>Lufthansa</a> and <a href='http://www.lot.com/gb/en' target='_blank'>LOT</a> all have a dense network of daily connections to and from the city. It would be wise to try a flight aggregator like <a href='https://www.momondo.com/' target='_blank'>Momondo</a> or <a href='https://www.google.com/flights/' target='_blank'>Google Flights</a>. There are frequent train connections from Germany and inside Poland, so please choose these if you want to travel in a way more friendly to the environment. Bus transport is also an option on <a href='http://www.polskibus.com/en/index.htm' target='_blank'>PolskiBus</a> which operates a lot of routes in the region.</p>
+
+          <p>Inside the city of Poznan there is a good <a href='http://www.ztm.poznan.pl/en/#planner' target='_blank'>public transporation system</a> with a dense network throughout the city.</p>
 
               <h2 class='title right'><span class='first'>A</span>bout <span class='second'>u</span>s</h2>
-              - haskell fanatics
-              - biggest functional programming meetup in central europe (check)
-              - 
-              <p>Vivamus tristique ex eu justo vestibulum pellentesque. Pellentesque tempus convallis erat, ut auctor lacus blandit vitae. Mauris at arcu turpis. In sed nisl id purus sodales suscipit nec sit amet nisl. Integer at feugiat eros. Morbi placerat dolor ut accumsan malesuada. Mauris lectus tellus, dapibus vitae ligula at, aliquam sollicitudin diam. Sed finibus, lectus a fermentum pretium, mauris nibh pretium velit, nec ullamcorper ex velit quis nisi. Vestibulum et imperdiet nulla. Integer auctor ex mi, ac vestibulum ipsum consequat et. Integer ultrices quam a maximus ornare. Phasellus pellentesque imperdiet mi at aliquet.</p>
+              <p>We're Ewa Krużyńska and Michał Kawalec and we really love functional programming. We started a Haskell meetup, <a href='https://www.meetup.com/Monadic-Warsaw/'>Monadic Warsaw</a>, a couple of years ago and it grew into one of the biggest Haskell events in central Europe. While such chances to meet other programmers are really useful for building a community, we wanted to also create a unique event — something where people can really learn about their tools in depth, where they can explore the language and talk to mentors and other participants — and all that at an affordable price.</p>
           </div>
       </div>
 
@@ -102,23 +98,28 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
             <div class='row'>
                 <div class='col-4 column'>
                     <h3 class='name'>Carter Schonwald</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x164' />
+                    <img class='photo' src='http://via.placeholder.com/294x294' />
                     <div class='bio'>
                         Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam sagittis vehicula ligula, non fringilla purus ultricies aliquam. Aliquam cursus, lacus et pellentesque scelerisque, metus ex aliquam ligula, eget commodo risus arcu et arcu. Cras ullamcorper, mauris ultricies fermentum tempus, dui orci rutrum tortor, nec egestas ligula elit quis lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea.
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <h3 class='name'>Marcin Szamotulski</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x164' />
+                    <img class='photo' src='http://via.placeholder.com/294x294' />
                     <div class='bio'>
-                        Aenean vel purus faucibus, tristique justo suscipit, egestas mauris. Nulla id arcu sed neque lacinia viverra. Nullam est risus, vestibulum volutpat vehicula non, dictum et sapien. Vestibulum a enim accumsan, tincidunt sem non, ultrices lorem. Nulla laoreet dui sed turpis tincidunt hendrerit a non urna. Nullam quis massa ac lectus porta suscipit at ultricies magna. In nibh nunc, vehicula id accumsan eget, accumsan id nibh. Integer sed nunc ut nibh.
+Marcin is a mathematician and a functional programmer.  He did research in
+Abstract Algebra and Category theory in the crossroads of Galois theory.
+He also did research in Game Theory.  He has been programming in in various
+languages and paradigms: from C and Python, to PureScript and Haskell,
+and logic programming.  Currently he is working for IOHK on the
+blockchain technology.
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <h3 class='name'>Michał Kawalec</h3>
                     <img class='photo' src='/michal.jpg' />
                     <div class='bio'>
-                       Michał is an engineer of many trades. He works at X-Team where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about mountain biking ;)
+                       Michał is an engineer of many trades. He works at X-Team where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about riding on two wheels ;)
                     </div>
                 </div>
             </div>
@@ -130,9 +131,9 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
             <h1>=&lt;&lt; Call for speakers &gt;&gt;=</h1>
             <h4>Deadline: 28th of Febuary 2018</h4>
             
-            <p>Do you want to lead workshops at the summer school? We need people like you to be a speaker at our event!</p>
+            <p>Do you want to lead workshops at the summer school? We need you to be a speaker at our event.</p>
             
-            <p>We are looking for people interested in leading workshops spanning three to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will be having two tracks, a beginners one that aims to cater to programmers that might not have experience with Haskell and an advanced for people who know and understand it and want to learn new things.</p>
+            <p>We are looking for people interested in leading workshops spanning three to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will be having two tracks, a beginners one that aims to cater to programmers that might not have experience with Haskell and advanced for people who know and understand it and want to learn new things. We will cover your travel and accommodation costs.</p>
 
             <h2>
                 <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScKD2T-5m8q4CahA-TBhdMH43ziTPv7op9j4_rcY9bZf_DWRg/viewform?usp=sf_link" target='_blank'>Submit a proposal</a>
@@ -143,6 +144,11 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
     <div class='sign-up'>
         <div class='container'>
             Eventbrite box goes here
+
+            <div class='col-12 column email'>
+                Got a question? Email us at
+                <a href='mailto:team@monad.party'>team@monad.party</a>
+            </div>
         </div>
     </div>
 
