--- a/src/index.html
+++ b/src/index.html
@@ -51,22 +51,23 @@
     <div class='about-us'>
       <div class='container'>
           <h2 class='title right'><span class='first'>A</span>bout the <span class='second'>e</span>vent</h2>
-          <p>Monadic Party is a five-days long festival of Haskell learning and teaching. Our vision is to teach in depth, in a way impossible at a conference. Because of the additional time at our disposal we can get deeper into each topic than just a usual talk slot to show not only the surface but a larger part of the story behind the subject. The size will be limited and capped at fifty attendees to ensure a good learning experience.</p>
+          <p>Monadic Party is a five-days long Haskell summer school. Our vision is to teach in depth with each talk spanning multiple sessions. Because of the additional time at our disposal we can get deeper into each topic to show a larger part of the story behind the subject. The size will be capped at fifty attendees to provide you with a good learning experience.</p>
 
-          <p>We will have two tracks, one for programmers that aren't experienced in Haskell and would like to learn it from the basic concepts. We will show you the language over the course of the five days, intensly and in depth. The other track is for people already familiar with the language and will present a selection of talks and workshops on a variety of topics. The final talk titles will be announced after our call for speakers closes at the end of Febuary.</p>
+          <p>We will have two tracks, one for programmers that aren't experienced in Haskell and would like to learn it from the basic concepts. The other track is for people already familiar with the language and will present a selection of talks and workshops on a variety of topics. We will announce the list of topics after our call for speakers closes at the end of Febuary.</p>
 
-          <p>By organizing it in Poznan we can keep the ticket cost at a low level for such a long event, while having the school in a beautiful city with a great nightlife and a lot of things to do. The venue is a gorgeous recently restored old building at <a href='http://mlynska12.pl/' target='_blank'>Młyńska 12</a> where we have the whole highest floor at our disposal. So the only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch and tea or coffee is included in the ticket price.</p>
+          <p>We chose Poznan to host the summer school because of its architecture, culture and nightlife. The venue is a recently restored lovely old building at <a href='http://mlynska12.pl/' target='_blank'>Młynska 12</a> where we have the whole highest floor at our disposal. So the only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch, tea and coffee is included in the ticket price.</p>
 
           <h2 class='title left'><span class='first'>G</span>etting <span class='second'>T</span>here</h2>
 
-          <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Młyńska 12</a>, so any accommodation in the city center should be at a walkable distance from the venue. Depending on your budget and preferences, you can find places to stay on <a href='https://www.booking.com/searchresults.en-gb.html?label=gen173nr-1FCAEoggJCAlhYSDNYBGi2AYgBAZgBLsIBA3gxMcgBDNgBAegBAfgBC5ICAXmoAgM&lang=en-gb&sid=f338025b520e3faeca40c7db96132554&sb=1&src=index&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Findex.en-gb.html%3Flabel%3Dgen173nr-1FCAEoggJCAlhYSDNYBGi2AYgBAZgBLsIBA3gxMcgBDNgBAegBAfgBC5ICAXmoAgM%3Bsid%3Df338025b520e3faeca40c7db96132554%3Bsb_price_type%3Dtotal%26%3B&ss=Pozna%C5%84&ssne=Pozna%C5%84&ssne_untouched=Pozna%C5%84&dest_id=-523642&dest_type=city&checkin_monthday=10&checkin_month=6&checkin_year=2018&checkout_monthday=15&checkout_month=6&checkout_year=2018&group_adults=1&group_children=0&no_rooms=1&genius_rate=1&from_sf=1' target='_blank'>Booking.com</a>, <a href='https://www.hostelworld.com/search?search_keywords=Poznan%2C+Poland&country=Poland&city=Poznan&date_from=2018-06-10&date_to=2018-06-15&number_of_guests=1' target='_blank'>Hostelworld</a> or <a href='https://pl.hotels.com/search.do?resolved-location=CITY%3A1053596%3AUNKNOWN%3AUNKNOWN&destination-id=1053596&q-destination=Pozna%C5%84,%20Polska&q-check-in=2018-06-10&q-check-out=2018-06-15&q-rooms=1&q-room-0-adults=2&q-room-0-children=0' target='_blank'>Hotels.com</a>. If you feel like you need some guidance on choosing a place to stay, do email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
+          <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Młynska 12</a>, so any accommodation in the city center should be at a walkable distance from the venue. Depending on your budget and preferences, you can find places to stay on <a href='https://www.booking.com/searchresults.en-gb.html?label=gen173nr-1FCAEoggJCAlhYSDNYBGi2AYgBAZgBLsIBA3gxMcgBDNgBAegBAfgBC5ICAXmoAgM&lang=en-gb&sid=f338025b520e3faeca40c7db96132554&sb=1&src=index&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Findex.en-gb.html%3Flabel%3Dgen173nr-1FCAEoggJCAlhYSDNYBGi2AYgBAZgBLsIBA3gxMcgBDNgBAegBAfgBC5ICAXmoAgM%3Bsid%3Df338025b520e3faeca40c7db96132554%3Bsb_price_type%3Dtotal%26%3B&ss=Pozna%C5%84&ssne=Pozna%C5%84&ssne_untouched=Pozna%C5%84&dest_id=-523642&dest_type=city&checkin_monthday=10&checkin_month=6&checkin_year=2018&checkout_monthday=15&checkout_month=6&checkout_year=2018&group_adults=1&group_children=0&no_rooms=1&genius_rate=1&from_sf=1' target='_blank'>Booking.com</a>, <a href='https://www.hostelworld.com/search?search_keywords=Poznan%2C+Poland&country=Poland&city=Poznan&date_from=2018-06-10&date_to=2018-06-15&number_of_guests=1' target='_blank'>Hostelworld</a> or <a href='https://pl.hotels.com/search.do?resolved-location=CITY%3A1053596%3AUNKNOWN%3AUNKNOWN&destination-id=1053596&q-destination=Pozna%C5%84,%20Polska&q-check-in=2018-06-10&q-check-out=2018-06-15&q-rooms=1&q-room-0-adults=2&q-room-0-children=0' target='_blank'>Hotels.com</a>. If you feel like you need some guidance on choosing a place to stay, do email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
 
           <p>In terms of travel, <a href='https://wizzair.com' target='_blank'>WizzAir</a>, <a href='https://www.ryanair.com/gb/en/' target='_blank'>Ryanair</a>, <a href='https://www.lufthansa.com/uk/en/Homepage' target='_blank'>Lufthansa</a> and <a href='http://www.lot.com/gb/en' target='_blank'>LOT</a> all have a dense network of daily connections to and from the city. It would be wise to try a flight aggregator like <a href='https://www.momondo.com/' target='_blank'>Momondo</a> or <a href='https://www.google.com/flights/' target='_blank'>Google Flights</a>. There are frequent train connections from Germany and inside Poland, so please choose these if you want to travel in a way more friendly to the environment. Bus transport is also an option on <a href='http://www.polskibus.com/en/index.htm' target='_blank'>PolskiBus</a> which operates a lot of routes in the region.</p>
 
           <p>Inside the city of Poznan there is a good <a href='http://www.ztm.poznan.pl/en/#planner' target='_blank'>public transporation system</a> with a dense network throughout the city.</p>
 
               <h2 class='title right'><span class='first'>A</span>bout <span class='second'>u</span>s</h2>
-              <p>We're Ewa Krużyńska and Michał Kawalec and we really love functional programming. We started a Haskell meetup, <a href='https://www.meetup.com/Monadic-Warsaw/'>Monadic Warsaw</a>, a couple of years ago and it grew into one of the biggest Haskell events in central Europe. While such chances to meet other programmers are really useful for building a community, we wanted to also create a unique event — something where people can really learn about their tools in depth, where they can explore the language and talk to mentors and other participants — and all that at an affordable price.</p>
+              <p>We're the organizers of <a href='https://www.meetup.com/Monadic-Warsaw/' target='_blank'>Monadic Warsaw</a>, Ewa Kruzynska and Michal Kawalec. With over five hundred members it grew up to be one of the biggest Haskell meetups in Europe. We've had speakers and visitors from all over the world and we also run a <a href='https://www.youtube.com/channel/UCCeiYYR2fCXarkfSqqFBwuA' target='_blank'>YouTube channel</a>. It is our way of popularizing functional programming and building a community of interested people. We are sure the summer school will give us as much fun as Monadic Warsaw.
+              </p>
           </div>
       </div>
 
@@ -74,22 +75,22 @@
         <div class='container'>
             <div class='row'>
                 <div class='col-4 column'>
-                    <h3 class='name'>Julie Moronuki</h3>
                     <img class='photo' src='/julie.jpg' />
+                    <h3 class='name'><span class='first'>J</span>ulie <span class='second'>M</span>oronuki</h3>
                     <div class='bio'>
                     Julie Moronuki is one of the authors of Haskell Programming from First Principles. She has a master's degree in linguistics and taught English, English as a second language, philosophy, linguistics, and medical transcription for over ten years. When she is not writing Haskell, writing about Haskell, or teaching Haskell at a local meetups, she homeschools her two children, pickles everything in sight, and adopts too many pets.
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <h3 class='name'>Chris Martin</h3>
                     <img class='photo' src='/chris.jpg' />
+                    <h3 class='name'><span class='first'>C</span>hris <span class='second'>M</span>artin</h3>
                     <div class='bio'>
 Chris Martin has a master's degree in computer science from Georgia Tech. He has worked for GTRI, was cofounder and CTO of Fold, and worked for Hijro writing a blockchain in Haskell. He has recently founded Typeclass Consulting with Julie Moronuki and is also writing a book, The Joy of Haskell, with her. Chris tries to increase public awareness of NixOS and the power of good documentation. He enjoys barefoot running, sour beers, and arguing with Julie about math.
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <h3 class='name'>Krzysztof Gogolewski</h3>
                     <img class='photo' src='/krzysiek.jpg' />
+                    <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
                     <div class='bio'>
 Haskell user since 2008, currently software engineer at Codility. Studied mathematics and computer science and University of Warsaw and Ecole Polytechnique. Enjoys finding bugs in GHC.
                     </div>
@@ -97,15 +98,15 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
             </div>
             <div class='row'>
                 <div class='col-4 column'>
-                    <h3 class='name'>Carter Schonwald</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x294' />
+                    <img class='photo' src='/marcin.jpg' />
+                    <h3 class='name'><span class='first'>C</span>arter <span class='second'>S</span>chonwald</h3>
                     <div class='bio'>
                         Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam sagittis vehicula ligula, non fringilla purus ultricies aliquam. Aliquam cursus, lacus et pellentesque scelerisque, metus ex aliquam ligula, eget commodo risus arcu et arcu. Cras ullamcorper, mauris ultricies fermentum tempus, dui orci rutrum tortor, nec egestas ligula elit quis lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea.
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <h3 class='name'>Marcin Szamotulski</h3>
-                    <img class='photo' src='http://via.placeholder.com/294x294' />
+                    <img class='photo' src='/marcin.jpg' />
+                    <h3 class='name'><span class='first'>M</span>arcin <span class='second'>S</span>zamotulski</h3>
                     <div class='bio'>
 Marcin is a mathematician and a functional programmer.  He did research in
 Abstract Algebra and Category theory in the crossroads of Galois theory.
@@ -116,8 +117,8 @@ blockchain technology.
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <h3 class='name'>Michał Kawalec</h3>
-                    <img class='photo' src='/michal.jpg' />
+                    <img class='photo' src='/michal.png' />
+                    <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
                     <div class='bio'>
                        Michał is an engineer of many trades. He works at X-Team where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about riding on two wheels ;)
                     </div>
@@ -133,7 +134,7 @@ blockchain technology.
             
             <p>Do you want to lead workshops at the summer school? We need you to be a speaker at our event.</p>
             
-            <p>We are looking for people interested in leading workshops spanning three to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will be having two tracks, a beginners one that aims to cater to programmers that might not have experience with Haskell and advanced for people who know and understand it and want to learn new things. We will cover your travel and accommodation costs.</p>
+            <p>We are looking for people interested in leading workshops spanning three to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will be having two tracks, a beginners one that aims to cater to programmers that might not have experience with Haskell and advanced for people who know and understand it and want to learn new concepts. We will cover your travel and accommodation costs.</p>
 
             <h2>
                 <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScKD2T-5m8q4CahA-TBhdMH43ziTPv7op9j4_rcY9bZf_DWRg/viewform?usp=sf_link" target='_blank'>Submit a proposal</a>
@@ -143,11 +144,12 @@ blockchain technology.
 
     <div class='sign-up'>
         <div class='container'>
-            Eventbrite box goes here
+
+<div style="width:100%; text-align:left;"><iframe src="https://eventbrite.com/tickets-external?eid=41355832408&ref=etckt" frameborder="0" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ></div></div>
 
             <div class='col-12 column email'>
                 Got a question? Email us at
-                <a href='mailto:team@monad.party'>team@monad.party</a>
+                <a href='mailto:team@monadic.party'>team@monadic.party</a>
             </div>
         </div>
     </div>
