--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
                     <div class='bio'>
 Marcin is a mathematician and a functional programmer.  He did research in
 Abstract Algebra and Category theory in the crossroads of Galois theory.
-He also did research in Game Theory.  He has been programming in in various
+He also did research in Game Theory.  He has been programming in various
 languages and paradigms: from C and Python, to PureScript and Haskell,
 and logic programming.  Currently he is working for IOHK on the
 blockchain technology.
