--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
           <p>Inside the city of Poznan there is a good <a href='http://www.ztm.poznan.pl/en/#planner' target='_blank'>public transporation system</a> with a dense network throughout the city.</p>
 
               <h2 class='title right'><span class='first'>A</span>bout <span class='second'>u</span>s</h2>
-              <p>We're the organizers of <a href='https://www.meetup.com/Monadic-Warsaw/' target='_blank'>Monadic Warsaw</a>, Ewa Kruzynska and Michal Kawalec. With over five hundred members it grew up to be one of the biggest Haskell meetups in Europe. We've had speakers and visitors from all over the world and we also run a <a href='https://www.youtube.com/channel/UCCeiYYR2fCXarkfSqqFBwuA' target='_blank'>YouTube channel</a>. It is our way of popularizing functional programming and building a community of interested people. We are sure the summer school will give us as much fun as Monadic Warsaw.
+              <p>We're the organizers of <a href='https://www.meetup.com/Monadic-Warsaw/' target='_blank'>Monadic Warsaw</a>, Ewa Kruzynska and Michal Kawalec. With over five hundred members it grew up to be one of the biggest Haskell meetups in Europe. We've had speakers and visitors from all over the world and we also host a <a href='https://www.youtube.com/channel/UCCeiYYR2fCXarkfSqqFBwuA' target='_blank'>YouTube channel</a>. It is our way of popularizing functional programming and building a community of interested people. We are sure the summer school will give us as much fun as Monadic Warsaw.
               </p>
           </div>
       </div>
