added carter's bio

--- a/src/index.html
+++ b/src/index.html
@@ -98,10 +98,10 @@ Haskell user since 2008, currently software engineer at Codility. Studied mathem
             </div>
             <div class='row'>
                 <div class='col-4 column'>
-                    <img class='photo' src='/marcin.jpg' />
+                    <img class='photo' src='/carter.jpg' />
                     <h3 class='name'><span class='first'>C</span>arter <span class='second'>S</span>chonwald</h3>
                     <div class='bio'>
-                        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam sagittis vehicula ligula, non fringilla purus ultricies aliquam. Aliquam cursus, lacus et pellentesque scelerisque, metus ex aliquam ligula, eget commodo risus arcu et arcu. Cras ullamcorper, mauris ultricies fermentum tempus, dui orci rutrum tortor, nec egestas ligula elit quis lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In hac habitasse platea.
+                        Hello! I’m Carter Schonwald, a computer scientist. Right now I’m collecting novel algorithmic and mathematical problems in their native industrial habitat, they’re quite fun to spot in their natural unformalized state. Later I think I shall climb back into my tower and analyze them in the laboratory.
                     </div>
                 </div>
                 <div class='col-4 column'>
