added twitter site

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@monadic_waw" />
 
     <title>Monadic Party</title>
     <link rel="stylesheet" href="/main.css">
