--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@ blockchain technology.
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img class='photo' src='/michal.png' />
+                    <img class='photo' src='/michal.jpg' />
                     <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
                     <div class='bio'>
                        Michał is an engineer of many trades. He works at X-Team where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about riding on two wheels ;)
