added missing links

--- a/src/index.html
+++ b/src/index.html
@@ -81,21 +81,21 @@
                     <img class='photo' src='/julie.jpg' />
                     <h3 class='name'><span class='first'>J</span>ulie <span class='second'>M</span>oronuki</h3>
                     <div class='bio'>
-                    Julie Moronuki is one of the authors of Haskell Programming from First Principles. She has a master's degree in linguistics and taught English, English as a second language, philosophy, linguistics, and medical transcription for over ten years. When she is not writing Haskell, writing about Haskell, or teaching Haskell at a local meetups, she homeschools her two children, pickles everything in sight, and adopts too many pets.
+                        Julie Moronuki is one of the authors of <a href='http://haskellbook.com/' target='_blank'>Haskell Programming from First Principles</a>. She has a master's degree in linguistics and taught English, English as a second language, philosophy, linguistics, and medical transcription for over ten years. When she is not writing Haskell, writing about Haskell, or teaching Haskell at a local meetups, she homeschools her two children, pickles everything in sight, and adopts too many pets.
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <img class='photo' src='/chris.jpg' />
                     <h3 class='name'><span class='first'>C</span>hris <span class='second'>M</span>artin</h3>
                     <div class='bio'>
-Chris Martin has a master's degree in computer science from Georgia Tech. He has worked for GTRI, was cofounder and CTO of Fold, and worked for Hijro writing a blockchain in Haskell. He has recently founded Typeclass Consulting with Julie Moronuki and is also writing a book, The Joy of Haskell, with her. Chris tries to increase public awareness of NixOS and the power of good documentation. He enjoys barefoot running, sour beers, and arguing with Julie about math.
+                        Chris Martin has a master's degree in computer science from Georgia Tech. He has worked for <a href='https://gtri.gatech.edu/laboratories/cybersecurity-information-protection-and-hardware-evaluation-research' target='_blank'>GTRI</a>, was cofounder and CTO of <a href='https://use.foldapp.com/' target='_blank'>Fold</a>, and worked for <a href='https://hijro.com/' target='_blank'>Hijro</a> writing a blockchain in Haskell. He has recently founded <a href='https://typeclasses.com/'>Typeclass Consulting</a> with Julie Moronuki and is also writing a book, <a href='https://joyofhaskell.com/'>The Joy of Haskell</a>, with her. Chris tries to increase public awareness of NixOS and the power of good documentation. He enjoys barefoot running, sour beers, and arguing with Julie about math.
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <img class='photo' src='/krzysiek.jpg' />
                     <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
                     <div class='bio'>
-Haskell user since 2008, currently software engineer at Codility. Studied mathematics and computer science and University of Warsaw and Ecole Polytechnique. Enjoys finding bugs in GHC.
+                        Haskell user since 2008, currently software engineer at <a href='https://codility.com/' target='_blank'>Codility</a>. Studied mathematics and computer science and University of Warsaw and Ecole Polytechnique. Enjoys finding bugs in GHC.
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@ Marcin is a mathematician and a functional programmer.  He did research in
 Abstract Algebra and Category theory in the crossroads of Galois theory.
 He also did research in Game Theory.  He has been programming in various
 languages and paradigms: from C and Python, to PureScript and Haskell,
-and logic programming.  Currently he is working for IOHK on the
+and logic programming.  Currently he is working for <a href='https://iohk.io/' target='_blank'>IOHK</a> on the
 blockchain technology.
                     </div>
                 </div>
@@ -123,7 +123,7 @@ blockchain technology.
                     <img class='photo' src='/michal.jpg' />
                     <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
                     <div class='bio'>
-                       Michał is an engineer of many trades. He works at X-Team where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about riding on two wheels ;)
+                        Michał is an engineer of many trades. He works at <a href='https://x-team.com/' target='_blank'>X-Team</a> where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about riding on two wheels ;)
                     </div>
                 </div>
             </div>
